--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  path: ^1.9.0
+  path: ^1.9.1
+  dcli: ^8.3.0
 
 dev_dependencies:
   lints: ^6.0.0
