--- a/test/test_app/.gitignore
+++ b/test/test_app/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignore build outputs
+build/
+android/app/build/
+android/.gradle/
+.dart_tool/
