--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,9 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 publish_to: 'none'
 
+executables:
+  store_services_cli:
+
 environment:
   sdk: ^3.10.4
 
