--- a/test/test_app/pubspec.yaml
+++ b/test/test_app/pubspec.yaml
@@ -43,13 +43,8 @@ dependencies:
       url: https://github.com/Mr-KrY4k/hms-flutter-plugin.git
       ref: hms_push_flutter_3.29
       path: flutter-hms-availability
+  permission_handler: ^12.0.1
 
-  advertising_id: ^2.7.1
-  firebase_remote_config: ^6.0.0
-  firebase_messaging: ^16.0.0
-  firebase_crashlytics: ^5.0.0
-  firebase_core: ^4.0.0
-  firebase_analytics: ^12.0.0
   flutter:
     sdk: flutter
 
