--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
       url: https://github.com/Mr-KrY4k/hms-flutter-plugin.git
       ref: hms_push_flutter_3.29
       path: flutter-hms-availability
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   lints: ^6.0.0
