--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,13 @@ name: store_services_cli
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
-publish_to: 'none'
+publish_to: "none"
 
 executables:
   store_services_cli:
 
 environment:
-  sdk: ^3.10.4
+  sdk: ^3.10.7
 
 # Add regular dependencies here.
 dependencies:
@@ -37,7 +37,6 @@ dependencies:
       url: https://github.com/Mr-KrY4k/hms-flutter-plugin.git
       ref: hms_push_flutter_3.29
       path: flutter-hms-availability
-  permission_handler: ^12.0.1
 
 dev_dependencies:
   lints: ^6.0.0
